added delete function

--- a/src/app/admin/students/deleteaccount/deleteaccount.component.html
+++ b/src/app/admin/students/deleteaccount/deleteaccount.component.html
@@ -8,7 +8,7 @@
             <!--Modal Text-->
             <div class="col-12 text-center">
                 <h2>Are you sure you want to delete this user? </h2>
-                <h2>{{data.user.username}}</h2>
+                <h2>{{data.user.firstName}}</h2>
             </div>
         </div>
         <mat-dialog-actions align="center" class="mb-1">
