--- a/src/app/admin/students/file-upload/file-upload.component.html
+++ b/src/app/admin/students/file-upload/file-upload.component.html
@@ -12,12 +12,26 @@
   
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div class="card">
-            <div class="body">
-             
+            <div class="card">
+                <div class="body">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <div class="card">
+                                <div class="body">
+                                    <div class="container-auth-form-btn">
+                                        <button class="btn btn-primary" (click)="upload()"> <span
+                                                *ngIf="loading"
+                                                class="spinner-border spinner-border-sm mr-1"></span>
+                                            <b>Upload</b>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
     </div>
   </section>
