--- a/src/app/admin/students/studentsAccounts/studentsAccounts.component.html
+++ b/src/app/admin/students/studentsAccounts/studentsAccounts.component.html
@@ -131,37 +131,27 @@
                   <mat-header-cell class="pr-0 column-nowrap" *matHeaderCellDef>Actions</mat-header-cell>
                   <mat-cell *matCellDef="let user;let i = index" [class.odd-row]="i % 2" [class.even-row]="!(i % 2)"
                     class="pr-0">
+                    <button mat-icon-button color="primary" (click)="$event.stopPropagation()"
+                    (click)="accountDetailsCall(user)" class="tbl-action-btn" matTooltip="View Details">
+                    <mat-icon>visibility</mat-icon>
+                  </button>
                     <button mat-icon-button color="primary" (click)="$event.stopPropagation()" (click)="editCall(user)"
                       class="tbl-action-btn" matTooltip="Update Account">
                       <mat-icon>edit</mat-icon>
                     </button>
 
-                    <button mat-icon-button color="primary" (click)="$event.stopPropagation()"
-                      (click)="changeRoleCall(user)" class="tbl-action-btn" matTooltip="Change Role">
-                      <mat-icon>settings_applications</mat-icon>
-                    </button>
-                    <button mat-icon-button *ngIf="user.deleteFlag == 'N'" color="primary"
+                  
+                    <button mat-icon-button color="primary"
                       (click)="$event.stopPropagation()" (click)="deleteDetailsCall(user)" matTooltip="Delete Account"
                       class="tbl-action-btn">
                       <mat-icon>delete_outline</mat-icon>
                     </button>
 
-                    <button mat-icon-button *ngIf="user.deleteFlag == 'Y'" color="primary"
-                      (click)="$event.stopPropagation()" (click)="restoreAccountCall(user)"
-                      matTooltip="Restore Deleted Account" class="tbl-action-btn">
-                      <mat-icon>restore</mat-icon>
-                    </button>
-                    <button mat-icon-button color="primary" *ngIf="user.isAcctLocked=='N'"
-                      (click)="$event.stopPropagation()" (click)="lockAccountCall(user)" matTooltip="Lock Account"
-                      class="tbl-action-btn">
-                      <mat-icon>lock</mat-icon>
-                    </button>
+                  
+                   
 
                 
-                    <button mat-icon-button color="primary" (click)="$event.stopPropagation()"
-                      (click)="accountDetailsCall(user)" class="tbl-action-btn" matTooltip="View Details">
-                      <mat-icon>visibility</mat-icon>
-                    </button>
+                   
                   </mat-cell>
                 </ng-container>
 
