--- a/src/app/admin/students/student-reports/student-reports.component.html
+++ b/src/app/admin/students/student-reports/student-reports.component.html
@@ -1,23 +1,53 @@
 <section class="content">
-    <div class="content-block">
-      <div class="block-header">
-        <!-- breadcrumb -->
-        <app-breadcrumb [title]="'Students Reports'" [items]="['Students']" [active_item]="'All Students'">
-        </app-breadcrumb>
-      </div>
-  
-      <!-- Widgets -->
-      <app-user-wigets></app-user-wigets>
-      <!-- #END# Widgets -->
-  
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div class="card">
-            <div class="body">
-             
-            </div>
+  <div class="content-block">
+    <div class="block-header">
+      <!-- breadcrumb -->
+      <app-breadcrumb [title]="'Students Reports'" [items]="['Students']" [active_item]="'All Students'">
+      </app-breadcrumb>
+    </div>
+
+    <!-- Widgets -->
+    <app-user-wigets></app-user-wigets>
+    <!-- #END# Widgets -->
+
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card">
+          <div class="body">
+            <form (ngSubmit)="onSubmit()" #dobRangeForm="ngForm">
+              <div class="row">
+                <div class="col-md-6">
+                  <mat-form-field appearance="outline" class="full-width">
+                    <mat-label>Start Date</mat-label>
+                    <input matInput [matDatepicker]="startDatePicker" [(ngModel)]="startDate" name="startDate" required>
+                    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #startDatePicker></mat-datepicker>
+                  </mat-form-field>
+                </div>
+
+                <div class="col-md-6">
+                  <mat-form-field appearance="outline" class="full-width">
+                    <mat-label>End Date</mat-label>
+                    <input matInput [matDatepicker]="endDatePicker" [(ngModel)]="endDate" name="endDate" required>
+                    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #endDatePicker></mat-datepicker>
+                  </mat-form-field>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <button mat-raised-button color="primary" type="submit">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    <b>Export Students Data</b>
+                  </button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+
+</section>
