--- a/src/app/admin/students/studentsAccounts/studentsAccounts.component.scss
+++ b/src/app/admin/students/studentsAccounts/studentsAccounts.component.scss
@@ -5,3 +5,18 @@
   .even-row {
     background-color: #eee;
   }
+  .mat-input-container {
+    display: flex;
+    align-items: center;
+    gap: 8px;  /* Adjust the gap between the input and the button */
+  }
+  
+  .mat-form-field-small {
+    flex-grow: 1;
+    max-width: 200px;  /* Adjust the width of the input */
+  }
+  
+  .input-sm {
+    width: 100%;  /* Ensures the input takes up available space */
+  }
+  
