finalize on updates

--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -4,7 +4,7 @@
       <div class="form-section">
         <div class="auth-wrapper">
           <div class="text-center">
-            <img src="assets/images/dlink-nbg.png" width="250px" height="250px" alt="" />
+            <img src="assets/images/compulynx-removebg.png" width="350px" height="250px" alt="" />
           </div>
           <br />
           <form class="validate-form" [formGroup]="authForm" (ngSubmit)="onSubmit()">
