--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,7 +5,7 @@
         (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-expanded="false"></a>
       <a href="#" onClick="return false;" class="bars" (click)="mobileMenuSidebarOpen($event,'overlay-open')"></a>
       <a class="navbar-brand" routerLink={{homePage}}>
-        <img src="assets/images/dlink-nbg.png" width="40%" height="40px" alt="" />
+        <img src="assets/images/compulynx-removebg.png" width="40%" height="40px" alt="" />
       </a>
     </div>
     <div class="collapse navbar-collapse" [ngbCollapse]="isNavbarCollapsed">
