--- a/src/app/admin/students/updateuser/updateuser.component.html
+++ b/src/app/admin/students/updateuser/updateuser.component.html
@@ -12,27 +12,27 @@
                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-3">
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>User name</mat-label>
-                                    <input formControlName="username" readonly matInput required />
-                                    <mat-error *ngIf="userForm.get('username').hasError('required')">
-                                        User name is required
+                                    <input formControlName="firstName" readonly matInput required />
+                                    <mat-error *ngIf="userForm.get('firstName').hasError('required')">
+                                        First Name is required
                                     </mat-error>
                                 </mat-form-field>
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-3">
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>First name</mat-label>
-                                    <input formControlName="firstname" matInput />
-                                    <mat-error *ngIf="userForm.get('firstname').hasError('required')">
-                                        First name is required
+                                    <input formControlName="lastName" matInput />
+                                    <mat-error *ngIf="userForm.get('lastName').hasError('required')">
+                                        Last Name is required
                                     </mat-error>
                                 </mat-form-field>
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-3">
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
-                                    <mat-label>Last name</mat-label>
-                                    <input formControlName="lastname" matInput required />
-                                    <mat-error *ngIf="userForm.get('lastname').hasError('required')">
-                                        Last name is required
+                                    <mat-label>Date of Birth</mat-label>
+                                    <input formControlName="dob" matInput required />
+                                    <mat-error *ngIf="userForm.get('dob').hasError('required')">
+                                        Date of birth is required
                                     </mat-error>
                                 </mat-form-field>
                             </div>
@@ -40,26 +40,38 @@
                         <div class="row">
                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-3">
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
-                                    <mat-label>Email</mat-label>
-                                    <input formControlName="email" matInput />
-                                    <mat-error *ngIf="userForm.get('email').hasError('required')">
-                                        Email is required
-                                    </mat-error>
-                                </mat-form-field>
-                            </div>
-                            
-                            <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mb-3">
-                                <mat-form-field class="example-full-width mb-3" appearance="outline">
-                                    <mat-label>Phone Number</mat-label>
-                                    <input matInput formControlName="phonenumber" required />
-                                    <mat-error *ngIf="userForm.get('phonenumber').hasError('required')">
-                                        Phone Number is required
+                                    <mat-label>studentClass</mat-label>
+                                    <input formControlName="studentClass" matInput />
+                                    <mat-error *ngIf="userForm.get('studentClass').hasError('required')">
+                                        studentClass is required
                                     </mat-error>
                                 </mat-form-field>
                             </div>
 
-                            
+                            <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mb-3">
+                                <mat-form-field class="example-full-width mb-3" appearance="outline">
+                                    <mat-label>score</mat-label>
+                                    <input matInput formControlName="score" required />
+                                    <mat-error *ngIf="userForm.get('score').hasError('required')">
+                                        score is required
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 mb-3">
+                                <mat-form-field class="example-full-width mb-3" appearance="outline">
+                                    <mat-label>status</mat-label>
+                                    <input matInput formControlName="status" required />
+                                    <mat-error *ngIf="userForm.get('status').hasError('required')">
+                                        <var></var> is required
+                                    </mat-error>
+                                </mat-form-field>
+
+                            </div>
+
+
+
                         </div>
+
 
 
                         <div class="row">
