--- a/src/app/admin/students/file-upload/file-upload.component.html
+++ b/src/app/admin/students/file-upload/file-upload.component.html
@@ -1,29 +1,29 @@
 <section class="content">
     <div class="content-block">
-      <div class="block-header">
-        <!-- breadcrumb -->
-        <app-breadcrumb [title]="'File Upload'" [items]="['Students']" [active_item]="'All Students'">
-        </app-breadcrumb>
-      </div>
-  
-      <!-- Widgets -->
-      <app-user-wigets></app-user-wigets>
-      <!-- #END# Widgets -->
-  
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="card">
-                <div class="body">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="card">
-                                <div class="body">
-                                    <div class="container-auth-form-btn">
-                                        <button class="btn btn-primary" (click)="upload()"> <span
-                                                *ngIf="loading"
-                                                class="spinner-border spinner-border-sm mr-1"></span>
-                                            <b>Upload</b>
-                                        </button>
+        <div class="block-header">
+            <!-- breadcrumb -->
+            <app-breadcrumb [title]="'File Upload'" [items]="['Students']" [active_item]="'All Students'">
+            </app-breadcrumb>
+        </div>
+
+        <!-- Widgets -->
+        <app-user-wigets></app-user-wigets>
+        <!-- #END# Widgets -->
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="card">
+                    <div class="body">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div class="card">
+                                    <div class="body">
+                                        <div class="container-auth-form-btn">
+                                            <button class="btn btn-primary" (click)="upload()"> <span *ngIf="loading"
+                                                    class="spinner-border spinner-border-sm mr-1"></span>
+                                                <b>Upload</b>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -33,5 +33,4 @@
             </div>
         </div>
     </div>
-    </div>
-  </section>
+</section>
