--- a/src/app/admin/students/updateuser/updateuser.component.html
+++ b/src/app/admin/students/updateuser/updateuser.component.html
@@ -7,13 +7,13 @@
                 </div>
                 <div class="body">
 
-                    <form [formGroup]="userForm" class="m-4">
+                    <form [formGroup]="studentForm" class="m-4">
                         <div class="row">
                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-3">
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>User name</mat-label>
                                     <input formControlName="firstName" readonly matInput required />
-                                    <mat-error *ngIf="userForm.get('firstName').hasError('required')">
+                                    <mat-error *ngIf="studentForm.get('firstName').hasError('required')">
                                         First Name is required
                                     </mat-error>
                                 </mat-form-field>
@@ -22,7 +22,7 @@
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>First name</mat-label>
                                     <input formControlName="lastName" matInput />
-                                    <mat-error *ngIf="userForm.get('lastName').hasError('required')">
+                                    <mat-error *ngIf="studentForm.get('lastName').hasError('required')">
                                         Last Name is required
                                     </mat-error>
                                 </mat-form-field>
@@ -31,7 +31,7 @@
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>Date of Birth</mat-label>
                                     <input formControlName="dob" matInput required />
-                                    <mat-error *ngIf="userForm.get('dob').hasError('required')">
+                                    <mat-error *ngIf="studentForm.get('dob').hasError('required')">
                                         Date of birth is required
                                     </mat-error>
                                 </mat-form-field>
@@ -42,7 +42,7 @@
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>studentClass</mat-label>
                                     <input formControlName="studentClass" matInput />
-                                    <mat-error *ngIf="userForm.get('studentClass').hasError('required')">
+                                    <mat-error *ngIf="studentForm.get('studentClass').hasError('required')">
                                         studentClass is required
                                     </mat-error>
                                 </mat-form-field>
@@ -52,7 +52,7 @@
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>score</mat-label>
                                     <input matInput formControlName="score" required />
-                                    <mat-error *ngIf="userForm.get('score').hasError('required')">
+                                    <mat-error *ngIf="studentForm.get('score').hasError('required')">
                                         score is required
                                     </mat-error>
                                 </mat-form-field>
@@ -61,23 +61,31 @@
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
                                     <mat-label>status</mat-label>
                                     <input matInput formControlName="status" required />
-                                    <mat-error *ngIf="userForm.get('status').hasError('required')">
-                                        <var></var> is required
+                                    <mat-error *ngIf="studentForm.get('status').hasError('required')">
+                                        Status is required
                                     </mat-error>
                                 </mat-form-field>
 
                             </div>
-
-
-
                         </div>
+                        <div class="row">
+                            <label for="photo">Photo:</label>
+                            <input type="file" id="photo" (change)="onFileSelected($event)" />
+                            <section>
+                                <img *ngIf="student?.photoPath" [src]="student?.photoPath" alt="Student Photo" width="150"
+                                    height="150">
+
+                            </section>
+                        </div>
+
+                      
 
 
 
                         <div class="row">
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                                 <div class="example-button-row" align="end">
-                                    <button mat-raised-button color="primary" [disabled]="!userForm.valid"
+                                    <button mat-raised-button color="primary" [disabled]="!studentForm.valid"
                                         (click)="updateUser()">
                                         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                         <b>SUBMIT</b>
