--- a/src/app/admin/students/updateuser/updateuser.component.html
+++ b/src/app/admin/students/updateuser/updateuser.component.html
@@ -11,8 +11,8 @@
                         <div class="row">
                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-3">
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
-                                    <mat-label>User name</mat-label>
-                                    <input formControlName="firstName" readonly matInput required />
+                                    <mat-label>First Name</mat-label>
+                                    <input formControlName="firstName" matInput required />
                                     <mat-error *ngIf="studentForm.get('firstName').hasError('required')">
                                         First Name is required
                                     </mat-error>
@@ -20,7 +20,7 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-3">
                                 <mat-form-field class="example-full-width mb-3" appearance="outline">
-                                    <mat-label>First name</mat-label>
+                                    <mat-label>Last name</mat-label>
                                     <input formControlName="lastName" matInput />
                                     <mat-error *ngIf="studentForm.get('lastName').hasError('required')">
                                         Last Name is required
