--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,11 +24,11 @@ body {
 
 
 .bg {
-  background: linear-gradient(to left, #34336D, #fafafa);
+  background: linear-gradient(to left, #966226, #fafafa);
 }
 
 .bg1 {
-  background: linear-gradient(to right, #34336D, #fafafa);
+  background: linear-gradient(to right, #966226, #fafafa);
 }
 
 .down {
