--- a/src/app/admin/students/user-wigets/user-wigets.component.scss
+++ b/src/app/admin/students/user-wigets/user-wigets.component.scss
@@ -1,4 +1,4 @@
 .l-bg-brown
 {
-    background: linear-gradient(to right, #0b0357, #DDDDE7);
+    background: linear-gradient(to right, #966226, #DDDDE7);
 }
